# aoc

./: .gitignore  README.md  aoc.cabal
01/: 01.hs
02/: 02.hs
03/: 03.hs
04/: 04.hs
05/: 05.hs
07/: 07.hs
08/: 08.hs
13/: 13.hs
14/: 14.hs
15/: 15.hs
16/: 16.hs
solutions/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs
solutions/libSplit/: SplitOn.hs
