cabal-version:      2.4
name:               aoc
version:            0.1.0.0

author:             Liam van der Vyver
maintainer:         91105007+liamvdvyver@users.noreply.github.com

extra-source-files:
    README.md

library SplitOn
    hs-source-dirs:   solutions
    build-depends:    base
    default-language: Haskell2010
    exposed-modules:  SplitOn
    hs-source-dirs:   solutions/libSplit

executable 01
    hs-source-dirs:   solutions
    build-depends:    base, containers
    default-language: Haskell2010
    main-is:          01.hs

executable 02
    hs-source-dirs:   solutions
    build-depends:    base, containers
    default-language: Haskell2010
    main-is:          02.hs

executable 03
    hs-source-dirs:   solutions
    build-depends:    base, containers
    default-language: Haskell2010
    main-is:          03.hs

executable 04
    hs-source-dirs:   solutions
    build-depends:    base, containers
    default-language: Haskell2010
    main-is:          04.hs

executable 05
    hs-source-dirs:   solutions
    build-depends:    base, containers, SplitOn
    default-language: Haskell2010
    main-is:          05.hs

executable 06
    hs-source-dirs:   solutions
    build-depends:    base, containers
    default-language: Haskell2010
    main-is:          06.hs

executable 07
    hs-source-dirs:   solutions
    build-depends:    base, containers
    default-language: Haskell2010
    main-is:          07.hs

executable 08
    hs-source-dirs:   solutions
    build-depends:    base, containers
    default-language: Haskell2010
    main-is:          08.hs

executable 09
    hs-source-dirs:   solutions
    build-depends:    base, containers
    default-language: Haskell2010
    main-is:          09.hs

executable 10
    hs-source-dirs:   solutions
    build-depends:    base, containers
    default-language: Haskell2010
    main-is:          10.hs

executable 11
    hs-source-dirs:   solutions
    build-depends:    base, containers
    default-language: Haskell2010
    main-is:          11.hs

executable 12
    hs-source-dirs:   solutions
    build-depends:    base, containers
    default-language: Haskell2010
    main-is:          12.hs

executable 13
    hs-source-dirs:   solutions
    build-depends:    base, containers
    default-language: Haskell2010
    main-is:          13.hs

executable 14
    hs-source-dirs:   solutions
    build-depends:    base, containers
    default-language: Haskell2010
    main-is:          14.hs

executable 15
    hs-source-dirs:   solutions
    build-depends:    base, containers
    default-language: Haskell2010
    main-is:          15.hs

executable 16
    hs-source-dirs:   solutions
    build-depends:    base, containers, parallel, hashtables
    default-language: Haskell2010
    main-is:          16.hs
